# Complex-Networks-PWR

./: main.py  pyproject.toml
lista1/: helper.ipynb  lista1.ipynb  lista1b.ipynb
lista2/: bledy.txt  example_spread_config.json  reportsto.tab
lista3/: L03_community_detection.ipynb  l3_puste.ipynb
lista4/: L04-graph-reduction-link-prediction.ipynb
lista4/citeseer/: 0_9_citeseer.adjlist  citeseer.adjlist
